@@ -32,6 +32,7 @@ This release includes the following bugfixes:
  o CURLINFO_REDIRECT_URL didn't work with the multi interface
  o CURLOPT_RANGE now works for SFTP downloads
  o FTP SIZE response 550 now causes CURLE_REMOTE_FILE_NOT_FOUND
+ o CURLINFO_PRIMARY_IP fixed for persistent connection re-use cases
 
 This release includes the following known bugs:
 
